[package]
name = "gpurepr"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
version = "0.0.0"
edition = "2018"

[lib]
name = "gpurepr"
path = "src/lib.rs"

#[features]
#default = []
#f16 = ["float"]

[dependencies]
cudart = { git = "https://github.com/peterhj/cudart" }
#float = { version = "*", optional = true }
#memrepr = { git = "https://github.com/peterhj/memrepr" }
