[package]
name = "gpurepr"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
version = "0.0.0"
edition = "2018"

[dependencies]
cuda = { path = "../libcuda" }
#cuda = "~0.4.0-pre.0"
podmem = { path = "../podmem", features = ["cuda"] }
#podmem = { git = "https://github.com/peterhj/podmem", features = ["cuda"] }
